--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mapa_nektarowania-",
   "version": "1.0.0",
   "description": "Mapa nektarowania i pozytkow pszczelich w Polsce",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
